# safety-dashboard

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose-staging.yml  docker-compose-testing.yml  docker-compose.yml  docker-dev-api.yml  package-lock.json  package.json  pyproject.toml
backend/: README.md  main.py
compose/api/: Dockerfile
compose/api/dev-docker/: api.env
compose/backend/: Dockerfile
compose/backend/docker-testing/: api.env.example
compose/backend/prod/: api.env.example
compose/backend/staging/: api.env.example
compose/ui/: Dockerfile
frontend/: .gitignore  .prettierrc  README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.css  App.jsx  App.tsx  AppRoutes.tsx  main.tsx  styles.css
frontend/src/components/: Education.tsx  PatientExperience.tsx
frontend/src/pages/: AuditAndQI.tsx  Education.tsx  Headlines.tsx  HomePage.css  HomePage.tsx  HomeTiles.css  HomeTiles.tsx  ICUExamplar.tsx  InfectionControl.tsx  LearningAndActions.tsx  LearningAndOutcomes.tsx  NotFound.tsx  PatientExperience.css  PatientExperience.tsx  Pharmacy.tsx  QualityAndSafety.tsx  SafetyNews.tsx
frontend/src/shared/: links.ts
frontend/src/shared/components/Layout/: HomePage.css  HomePage.tsx  HomeTiles.tsx  Layout.css  Layout.tsx  MainNavigation.tsx  NavBar.css  NavBar.tsx  NavLinks.css  NavLinks.tsx  TopHeader.tsx
frontend/src/shared/components/UIElements/: Button.css  Button.tsx  Tile.css  Tile.tsx  TileButton.css  TileButton.tsx
frontend/src/shared/components/UIElements/modal/: Backdrop.css  Backdrop.tsx  ErrorModal.tsx  Modal.css  Modal.tsx
nginx/conf.d/: api.conf  ui.conf
