[project]
name = "safety_dashboard_api"
dynamic = ["version"]
authors = [
    {email = "arc.collaborations@ucl.ac.uk", name = "Centre for Advanced Research Computing Healthcare Subgroup, UCL"},
]
description="API backend for the INFORMus Critical Care Dashboard"
classifiers=[
    "Development Status :: 4 - Beta ",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.10"

dependencies = [
    "aiopg>=1.4", # async postgres for EMAP
    "APScheduler", # scheduler for tasks
    "arrow", # better alternative to python's builtin datetime
    "environs", # for environment variable handling
    "fastapi", # our main web api framework
    "ipython", # useful for debugging live running containers on the GAEs
    "Jinja2", # templating engine for fastapi, used in the backend ui
    "motor", # async mongodb (also installs pymongo which we use directly)
    "numpy<2.0", # remove this when we support pandas >=2.0 as it comes with pandas
    "pandas >=1.4, <2", # our main data handling library (also installs numpy which we use directly)
]
[project.optional-dependencies]
dev = [
    "httpx", # for testing with an async http client (used by fastapi.testing.TestClient)
    "pre-commit", # configures and runs all of our linters
    "pyfakefs", # a fake filesystem test fixture
    "pyparsing",
    "pyrsistent",
    "pytest",
    "pytest-asyncio", # async testing
    "pytest-freezer",
    "pytest-cov",
    "pytest-mock",
    "types-PyYAML",
    "types-Pygments",
    "types-colorama",
    "types-psycopg2",
    "types-pyOpenSSL",
    "types-python-dateutil",
    "types-requests",
    "types-setuptools",
    "types-ujson",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "setuptools-scm",
]
[tool.setuptools]
packages = ["backend"]


[tool.ruff]
exclude = [
    'frontend',
]
line-length = 120

[tool.ruff.lint]
# Which rules to choose and suppress w.r.t defaults.
# - https://docs.astral.sh/ruff/rules/
select = [ 
    "I001", # isort
]
ignore = [
    "E501", # line too long
    "E712", # comparison to True (lots of false positives when using pandas) 
]

[tool.docformatter]
wrap-summaries = 120
wrap-descriptions = 120
# Docstring style is sphinx by default. For others add (e.g.)
# style = "google"
# See https://docformatter.readthedocs.io/en/latest/usage.html
# https://docformatter.readthedocs.io/en/latest/configuration.html
# https://docformatter.readthedocs.io/en/latest/usage.html#use-with-pre-commit

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
exclude = 'data-science/.*'
plugins = ["numpy.typing.mypy_plugin"]

[[tool.mypy.overrides]]
module = "backend.tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    'aiopg',
    'apscheduler.*',
    'arrow',
    'bokeh',
    'boltons',
    'cached_property',
    'certifi',
    'click',
    'environs',
    'idna',
    'motor.*',
    'numpy',
    'orjson',
    'pandas',
    'panel',
    'param',
    'psycopg2',
    'pymongo',
    'uvicorn'
]
ignore_missing_imports = true

[tool.pytest.ini_options]
# Promote ALL warnings (except for DeprecationWarnings and a couple of specific
# ImportWarnings) to errors (and fail the tests).
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*falling back to find_module.*:ImportWarning",
    "ignore:.*falling back to load_module.*:ImportWarning", # older versions of six cause these warnings in 3.10+
]
# TODO: we can remove these last two suppressions when we update pandas (six is
# a 2nd generation dependency of pandas).


# Run coverage reporting. Make an XML report (for VS code to read and for CI parsing).
addopts = "--cov=api --cov-report xml"

[tool.coverage]
run.omit = [
    "backend/tests/*", # Don't report coverage over the tests themselves.
]
